Bunch of changes, including format overhaul.
closes #8 closes #9 closes #10 closes #1 (mostly)

also autoupdates

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 flask = "*"
 requests = "*"
 sentry-sdk = {extras = ["flask"], version = "*"}
+pytz = "*"
+apscheduler = "*"
 
 [dev-packages]
 
