--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
+APScheduler==3.9.1
 blinker==1.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.0.4
-Flask==2.0.3
+click==8.1.2
+Flask==2.1.1
 gunicorn==20.1.0
 idna==3.3
-itsdangerous==2.1.0
-Jinja2==3.0.3
-MarkupSafe==2.1.0
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
-sentry-sdk==1.5.6
-urllib3==1.26.8
-Werkzeug==2.0.3
+sentry-sdk==1.5.8
+six==1.16.0
+tzdata==2022.1
+tzlocal==4.2
+urllib3==1.26.9
+Werkzeug==2.1.1
+zipp==3.8.0
